<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.activity.DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@color/teal_200"
        android:id="@+id/img_users"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/repository_detail"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toStartOf="@+id/tv_followers"
        app:layout_constraintStart_toEndOf="@id/img_users"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_repo"
        app:layout_constraintEnd_toEndOf="@id/tv_repo"
        app:layout_constraintStart_toStartOf="@id/tv_repo"
        android:id="@+id/tv_repoCount"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"
        android:text="@string/followers_detail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_following"
        app:layout_constraintStart_toStartOf="@+id/tv_repo"
        android:id="@+id/tv_followers"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_followers"
        app:layout_constraintEnd_toEndOf="@id/tv_followers"
        app:layout_constraintStart_toStartOf="@id/tv_followers"
        android:id="@+id/tv_followersCount"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/following_detail"
        android:textSize="12sp"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_followers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_following"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_following"
        app:layout_constraintEnd_toEndOf="@id/tv_following"
        app:layout_constraintStart_toStartOf="@id/tv_following"
        android:id="@+id/tv_followingCount"
        />

    <TextView
        android:id="@+id/tv_detail_fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name_detail"
        android:textColor="@color/teal_200"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_users" />
    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/username_detail"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_fullname" />
    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:text="@string/location_detail"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        app:drawableLeftCompat="@drawable/ic_location" />
    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:text="@string/company_detail"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
        app:drawableLeftCompat="@drawable/ic_work" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_company"
        android:background="@color/design_default_color_primary"
        app:tabTextColor="@color/white"
        android:layout_marginTop="16dp"
        android:id="@+id/tab_layout"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/viewPager"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/colorAccent"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        app:srcCompat="@drawable/ic_unfavorite"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        />



</androidx.constraintlayout.widget.ConstraintLayout>